--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #d88282;
+}
 .App {
   text-align: center;
 }
@@ -29,4 +34,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
